clean up report

--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -25,48 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "installing requirements...\n",
-      "Requirement already satisfied: certifi==2023.5.7 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 1)) (2023.5.7)\n",
-      "Requirement already satisfied: charset-normalizer==3.1.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 2)) (3.1.0)\n",
-      "Requirement already satisfied: colorama==0.4.6 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 3)) (0.4.6)\n",
-      "Requirement already satisfied: contourpy==1.1.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 4)) (1.1.0)\n",
-      "Requirement already satisfied: cycler==0.11.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 5)) (0.11.0)\n",
-      "Requirement already satisfied: exceptiongroup==1.1.1 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 6)) (1.1.1)\n",
-      "Requirement already satisfied: fonttools==4.40.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 7)) (4.40.0)\n",
-      "Requirement already satisfied: geographiclib==2.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 8)) (2.0)\n",
-      "Requirement already satisfied: geopy==2.3.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 9)) (2.3.0)\n",
-      "Requirement already satisfied: idna==3.4 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 10)) (3.4)\n",
-      "Requirement already satisfied: importlib-resources==5.12.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 11)) (5.12.0)\n",
-      "Requirement already satisfied: iniconfig==2.0.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 12)) (2.0.0)\n",
-      "Requirement already satisfied: kiwisolver==1.4.4 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 13)) (1.4.4)\n",
-      "Requirement already satisfied: matplotlib==3.7.1 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 14)) (3.7.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 15)) (1.24.3)\n",
-      "Requirement already satisfied: packaging==23.1 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 16)) (23.1)\n",
-      "Requirement already satisfied: pandas==2.0.2 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 17)) (2.0.2)\n",
-      "Requirement already satisfied: Pillow==9.5.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 18)) (9.5.0)\n",
-      "Requirement already satisfied: pluggy==1.0.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 19)) (1.0.0)\n",
-      "Requirement already satisfied: pyhafas==0.3.1 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 20)) (0.3.1)\n",
-      "Requirement already satisfied: pyparsing==3.1.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 21)) (3.1.0)\n",
-      "Requirement already satisfied: pytest==7.3.2 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 22)) (7.3.2)\n",
-      "Requirement already satisfied: python-dateutil==2.8.2 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 23)) (2.8.2)\n",
-      "Requirement already satisfied: pytz==2023.3 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 24)) (2023.3)\n",
-      "Requirement already satisfied: requests==2.31.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 25)) (2.31.0)\n",
-      "Requirement already satisfied: six==1.16.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 26)) (1.16.0)\n",
-      "Requirement already satisfied: tomli==2.0.1 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 27)) (2.0.1)\n",
-      "Requirement already satisfied: tzdata==2023.3 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 28)) (2023.3)\n",
-      "Requirement already satisfied: urllib3==2.0.2 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 29)) (2.0.2)\n",
-      "Requirement already satisfied: zipp==3.15.0 in c:\\users\\dendo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.8_qbz5n2kfra8p0\\localcache\\local-packages\\python38\\site-packages (from -r requirements.txt (line 30)) (3.15.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "if os.path.basename(os.getcwd()) == \"project\":\n",
@@ -91,27 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "old database deleted successfully.\n",
-      "created new database 'fluege.sqlite' with 236 entries.\n",
-      "old database deleted successfully.\n",
-      "created new database 'train_stations.sqlite' with 6519 entries.\n",
-      "old database deleted successfully.\n",
-      "created new database 'domestic_flights.sqlite' with 107 entries.\n",
-      "old database deleted successfully.\n",
-      "created new database 'final.sqlite' with 107 entries.\n",
-      "old database deleted successfully.\n",
-      "created new database 'flight_comp.sqlite' with 17 entries.\n",
-      "old database deleted successfully.\n",
-      "created new database 'counted_trip_emissions.sqlite' with 17 entries.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -167,13 +110,13 @@
        "0              26286            496000         4  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline(verbose=True, use_real_durations = False)\n",
+    "pipeline(verbose = False, use_real_durations = False)\n",
     "showFirstRow()"
    ]
   },
