--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -5,11 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Report: Comparing domestic flights with train alternatives\n",
+    "# Report: Comparing Domestic Flights With Train Alternatives\n",
     "\n",
-    "In recent years, there has been a remarkable surge in global interest and concern surrounding the issue of climate change, reflecting an increasing recognition of its far-reaching consequences and the urgent need for collective action. Train operators such as Deutsche Bahn in Germany use tools such as their [UmweltMobilCheck](https://www.img-bahn.de/s3/prod/v/img_responsive/ecology/umc-grundlagenbericht.pdf) or [EcoPassenger](https://uic.org/sustainability/energy-efficiency-and-co2-emissions/article/ecopassenger) internationally to compare the benefits and drawbacks of taking a train in comparison to trains and cars with respect to duration and generated CO2 emissions. \n",
+    "In recent years, there has been a remarkable surge in global interest and concern surrounding the issue of climate change, reflecting an increasing recognition of its far-reaching consequences and the urgent need for collective action. Train operators such as Deutsche Bahn in Germany use tools such as their [UmweltMobilCheck](https://www.img-bahn.de/s3/prod/v/img_responsive/ecology/umc-grundlagenbericht.pdf) or [EcoPassenger](https://uic.org/sustainability/energy-efficiency-and-co2-emissions/article/ecopassenger) internationally to compare the benefits and drawbacks of taking a train in comparison to flying with respect to duration and generated CO2 emissions. \n",
     "\n",
-    "This report uses open data from domestic (=within Germany) [business flights of the municipality of Cologne](https://mobilithek.info/offers/-1005216978664916194). It compares the CO2 emissions of the domestic flights taken in the year 2019 with public alternatives such as trains. The main focus will be on duration of transport and estimated CO2 emission. As there are no public APIs to access the emission data, an emission calculator for the train alternatives will be provided to create a transparent answer. This project aims to have an automated data pipeline method of analyzing data sets such as the example. \n",
+    "This report uses open data from domestic (=within Germany) [business flights of the municipality of Cologne](https://mobilithek.info/offers/-1005216978664916194). It compares the CO2 emissions of the domestic flights taken in the year 2019 with public alternatives such as trains. The main focus will be on duration of transport and estimated CO2 emissions. As there are no public APIs to access the emission data, an emission calculator for the train alternatives will be provided to create a transparent answer. This project aims to have an automated data pipeline method of analyzing data sets such as the example. \n",
     "\n",
     "The question that interests us is: What drawbacks and benefits are there in taking the train instead of flying domestic? "
    ]
@@ -47,7 +47,7 @@
    "source": [
     "## Dataset\n",
     "#### Generation\n",
-    "Create a sqlite file of the collected information that automatically calculates the required data for the results by running the pipeline. First, 236 flight entries are pulled from [Datasource1](https://mobilithek.info/offers/-1005216978664916194) into `fluege.sqlite`. Then, 6519 train station entries are pulled from [Datasource2](https://data.deutschebahn.com/dataset/data-haltestellen/resource/21edf505-e97d-4c99-bcc9-a46e85f8620f.html) into `train_stations.sqlite`. By mapping the train stations to the corresponding airports in Germany, a combined raw data base of 107 domestic flight entries is created into `domestic_flights.sqlite`. For every flight, the durations and emissions are calculated and saved into `final.sqlite`. The final `pipeline()` creates the following database showing the first row as an example:"
+    "Create a sqlite file of the collected information that automatically calculates the required data for the results by running the pipeline. First, 236 flight entries are pulled from [Datasource1](https://mobilithek.info/offers/-1005216978664916194) into `fluege.sqlite`. Then, 6519 train station entries are pulled from [Datasource2](https://data.deutschebahn.com/dataset/data-haltestellen/resource/21edf505-e97d-4c99-bcc9-a46e85f8620f.html) into `train_stations.sqlite`. By mapping the train stations to the corresponding airports in Germany, a combined raw database of 107 domestic flight entries is created into `domestic_flights.sqlite`. For every flight, the durations and emissions are calculated and saved into `final.sqlite`. The final `pipeline()` creates the following database showing the first row as an example:"
    ]
   },
   {
@@ -125,12 +125,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Explanation of generated data\n",
-    "All 107 entries of the generated database represent a domestic flight from the original source. It states the origin and destination iata airport code, the actual flight duration, an estimated flight duration, the estimated train duration with respective train emissions A and B, as well as the flight emissions as stated in the original data source. The following entries were added to the original data source:\n",
-    "* flight_duration: Due to unavailabilty of open source flight duration data, the flight duration will be calculated and estimated according to the aerial distance. This is equivalent to common flight duration calculators as found online. Since there are few unique domestic connections in our database, an exact lookup of the connections can be used setting the flag `use_real_durations` to `True`.\n",
+    "#### Explanation of the generated data\n",
+    "All 107 entries of the generated database represent a domestic flight from the original source database. It states the origin and destination iata airport code, the flight duration, the estimated train duration with respective train emissions A and B, the flight emissions as stated in the original data source as well as the quantity on how many flights were taken. The following entries were added to the original data source:\n",
+    "* flight_duration: Due to the unavailabilty of open source flight duration data, the flight duration will be calculated and estimated according to the aerial distance. This is equivalent to common flight duration calculators as found online. Since there are few unique domestic trips in our database, an exact lookup of the connections can be used setting the flag `use_real_durations` to `True`.\n",
     "* train_duration: As there is no open data on actual train durations available, the [HAFAS](https://www.hacon.de/en/portfolio/operator-business-products/) transport management system will be used to get real world train information.\n",
     "* train_emissions_A: This assumes that all interregional trains such as ICE trains are fully carbon neutral and have such zero emissions. This is the theoretical value using the status-quo. However, the ICE trains in reality are not operated by pure green electricity as DB buys a certain part of green energy and internally books this factor for the ICE train operations. Further reading can be found [here](https://www.img-bahn.de/s3/prod/v/img_responsive/ecology/umc-grundlagenbericht.pdf) and [here](https://www.br.de/nachrichten/wirtschaft/faktenfuchs-wie-gruen-ist-die-deutsche-bahn,Sp7n6hB). \n",
-    "* train_emissions_B: This is the emissions value for a train per km according to the [Umweltbundesamt](https://www.umweltbundesamt.de/bild/vergleich-der-durchschnittlichen-emissionen-0). It values regional trains at 93 g/km and interregional at 46 g/km of carbon emissions."
+    "* train_emissions_B: This is the emissions value for a train per km according to the [Umweltbundesamt](https://www.umweltbundesamt.de/bild/vergleich-der-durchschnittlichen-emissionen-0). It values regional trains at 93 g/km and interregional at 46 g/km of carbon emissions. Regional and Interregional trains will be mapped accordingly."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "source": [
     "#### Plausibility check of the generated data\n",
     "##### Flight durations\n",
-    "There are many non-open flight duration estimators as well as the real world information. Comparing the information of calculated duration vs real world data from July 2023 (choosing the shortest trip time) gets the following results for three different trips. The fourth column nonstop states if there was a nonstop flight available. Note the difference in duration when there is a flight with at least one stop."
+    "There are many non-open flight duration estimators as well as the real world information on flight durations. Comparing the information of the calculated duration vs real world data from July 2023 (choosing the shortest trip time) gets the following results for three different trips. The fourth column `nonstop` states if there was a nonstop flight available. Note the difference in duration when there is a flight with at least one stop."
    ]
   },
   {
@@ -223,7 +223,7 @@
    "metadata": {},
    "source": [
     "##### Train emissions\n",
-    "The train emission calculation states the two different approaches as stated above. For the 17 unique trips that have been undertaken, the three most taken trips examples are chosen to compare the plausibility of the used data by comparing them with the value of the [UmweltMobilChecker (UMC)](https://www.umweltmobilcheck.de/). The second column displays the calculated value as in train_emissions_A as stated above, the third column matches the corresponding setting at UMC by selecting the market based method which uses a green electricity model. The fourth column is the calculated value according to train_emissions_B and the fifth column matches it using the UMC by selecting the location based method. "
+    "The train emission calculation states the two different approaches as stated above. For the 17 unique trips that have been undertaken, the three most taken trips are chosen as examples to compare the plausibility of the used data by comparing them with the value of the [UmweltMobilChecker (UMC)](https://www.umweltmobilcheck.de/). The second column displays the calculated value as in train_emissions_A as stated above, the third column matches the corresponding setting at UMC by selecting the market based method which uses a green electricity model. The fourth column is the calculated value according to train_emissions_B and the fifth column matches it using the UMC by selecting the location based method. "
    ]
   },
   {
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion \n",
+    "## Conclusion \n",
     "Overall, it can be clearly seen that a compromise between emissions and time needs to be made. While trains operate on much lower carbon emissions than planes, they take significantly longer. However, especially for work trips, it might be possible to use that time on the train efficiently. "
    ]
   }
