remove unnecessary import statement

--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -36,8 +36,7 @@
     "if os.path.isfile(\"requirements.txt\"):\n",
     "    print(\"installing requirements...\")\n",
     "    %pip install -r requirements.txt\n",
-    "from main import pipeline,showFirstRow, showFlightComparison, showEmissionComparison, showTime,showEmissions\n",
-    "import pandas as pd\n"
+    "from main import pipeline,showFirstRow, showFlightComparison, showEmissionComparison, showTime,showEmissions"
    ]
   },
   {
