--- a/project/report.ipynb
+++ b/project/report.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "#### Plausibility check of the generated data\n",
     "##### Flight durations\n",
-    "There are many non-open flight duration estimators as well as the real world information on flight durations. Comparing the information of the calculated duration vs real world data from July 2023 (choosing the shortest trip time) gets the following results for three different trips. The fourth column `nonstop` states if there was a nonstop flight available. Note the difference in duration when there is a flight with at least one stop."
+    "There are many non-open flight duration estimators as well as the real world information on flight durations. Comparing the information of the calculated duration vs real world data from July 2023 (choosing the shortest trip time) gets the following results for different trips. The fourth column `nonstop` states if there was a nonstop flight available. Note the difference in duration when there is a flight with at least one stop."
    ]
   },
   {
